<resources>
    <string name="app_name">Birthday Reminder</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register_account">Register Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="filter_title_birthdayreminder">Birthday Reminder</string>
    <string name="title_activity_register">Register Account</string>
    <string name="prompt_message">The message</string>
    <string name="action_message_short">message</string>
    <string name="action_send_message">Save Message</string>
    <string name="error_invalid_password_length">Error not the correct length</string>
    <string name="action_register_short">register</string>
    <string name="error_no_internet_connection">No Internet connection available</string>
    <string name="error_authentication">Authentication failed.</string>
    <string name="success_register">Register completed successfully you can now login!</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Birthday reminder</string>
    <string name="nav_header_subtitle">Never forget a buddies birthday!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add_birthday">AddBirthdayActivity</string>
    <string name="prompt_nickname">nickname</string>
    <string name="action_nickname_short">nickname</string>
    <string name="prompt_fullName">full name</string>
    <string name="birthday_hint">mm/dd/yyyy</string>
    <string name="action_add_birthday">add birthday</string>
    <string name="add_success_message">Birthday successfully added</string>
    <string name="add_error_message">You canceled the operation please try again</string>
    <string name="action_sign_off">sign off</string>
    <string name="action_log_out">logout</string>
    <string name="error_invalid_name">please type a correct name</string>
    <string name="error_invalid_date">please fill in a date</string>
    <string name="add_logout_message">Do you really want to log out?</string>
    <string name="delete_birthday">Delete birthday</string>
    <string name="edit_birthday">Edit birthday</string>
    <string name="action_edit_birthday">Edit birthday</string>
    <string name="title_activity_edit_birthday">Edit birthdays</string>
    <string name="title_activity_delete_birthday">Delete birthdays</string>
    <string name="edit_succes_message">Birthday succesfully edited</string>
    <string name="exception_error">Exception occurred</string>
    <string name="remove_birthday_message">Are you sure you want to remove this birthday?</string>
</resources>
